<resources>
    <string name="app_name">SmartHome</string>
    <string name="home">Home</string>
    <string name="profile_image_des">profile image</string>
    <string name="device_name">Device Name</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">SAVE</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="address">Address</string>

    <!--    error messages-->
    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data, please try again!</string>
    <string name="device_type">Device Type</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="birthday">Birthday</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="postal_code">Postal Code</string>
    <string name="street_code">Street Code</string>

    <string-array name="device_types">
        <item>All</item>
        <item>Light</item>
        <item>Heater</item>
        <item>RollerShutter</item>
    </string-array>

</resources>