<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/header_bg">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:gravity="center"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="8dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/edit_profile"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btSave"
        app:layout_constraintStart_toEndOf="@+id/ibBack"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ibBack"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/btSave">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:divider="@drawable/empty_tall_divider"
            android:orientation="vertical"
            android:padding="15dp"
            android:showDividers="middle">

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/firstname"
                app:boxBackgroundColor="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/teFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/lastname"
                app:boxBackgroundColor="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/teLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/birthday"
                app:boxBackgroundColor="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/teBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/country"
                app:boxBackgroundColor="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/teCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/city"
                app:boxBackgroundColor="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/teCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/street"
                app:boxBackgroundColor="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/teStreet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/postal_code"
                app:boxBackgroundColor="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tePostalCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/street_code"
                app:boxBackgroundColor="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/teStreetCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>